objects/FSL_Day_Slot__mdt.object
<CustomObject>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <label>Day of Week</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mon</fullName>
                    <default>true</default>
                    <label>Mon</label>
                </value>
                <value>
                    <fullName>Tue</fullName>
                </value>
                <value>
                    <fullName>Wed</fullName>
                </value>
                <value>
                    <fullName>Thu</fullName>
                </value>
                <value>
                    <fullName>Fri</fullName>
                </value>
                <value>
                    <fullName>Sat</fullName>
                </value>
                <value>
                    <fullName>Sun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ending_Hour__c</fullName>
        <description>This is the Hour in the local timezone</description>
        <inlineHelpText>This is the Hour in the local timezone</inlineHelpText>
        <label>Ending Hour</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ending_Minute__c</fullName>
        <description>This is the Minutes in the local timezone</description>
        <inlineHelpText>This is the Minutes in the local timezone</inlineHelpText>
        <label>Ending Minute</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Time_Range__c</fullName>
        <label>FSL Time Range</label>
        <referenceTo>FSL_Work_Type_Data__mdt</referenceTo>
        <relationshipLabel>FSL Day Slots</relationshipLabel>
        <relationshipName>FSL_Day_Slots</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Starting_Hour__c</fullName>
        <description>This is the Hour in the local timezone</description>
        <inlineHelpText>This is the Hour in the local timezone</inlineHelpText>
        <label>Starting Hour</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Minute__c</fullName>
        <description>This is the Minutes in the local timezone</description>
        <inlineHelpText>This is the Minutes in the local timezone</inlineHelpText>
        <label>Starting Minute</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FSL Day Slot</label>
    <listViews>
        <fullName>All_Main</fullName>
        <columns>FSL_Time_Range__c</columns>
        <columns>DeveloperName</columns>
        <columns>Day_of_Week__c</columns>
        <columns>Starting_Hour__c</columns>
        <columns>Starting_Minute__c</columns>
        <columns>Ending_Hour__c</columns>
        <columns>Ending_Minute__c</columns>
        <filterScope>Everything</filterScope>
        <label>All (Main)</label>
    </listViews>
    <pluralLabel>FSL Day Slots</pluralLabel>
</CustomObject>